prod-gcp/web/api/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: &app web-api
  namespace: web
  labels:
    app: *app
    purpose: web

spec:
  selector:
    matchLabels:
      app: *app
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
      labels:
        app: *app
        purpose: vpn
    spec:
      containers:
        - name: *app
          image: freemiumvpn/fpn-gql:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 50Mi
          ports:
            - containerPort: 4000
