prod-gcp/web/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: &service web-api
  namespace: web
  labels:
    app: *service

spec:
  selector:
    app: *service
  ports:
    - name: *service
      port: 4000
      targetPort: 4000
      protocol: TCP
