prod-gcp/web/api/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: &ingress public-web-api
  namespace: web
  annotations:
    kubernetes.io/ingress.class: traefik-ingress-public
    external-dns.alpha.kubernetes.io/target: freemiumpn.com
spec:
  rules:
    - host: api.freemiumpn.com
